force-app/main/default/objects/Certification__c.object
<CustomObject>
    <fields>
        <fullName>CountsForTwoCertProgramRequirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counts for two cert program requirement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CredentialLevel__c</fullName>
        <description>Level of the credential as considered by the vendor.</description>
        <inlineHelpText>Level of the credential as considered by the vendor.</inlineHelpText>
        <label>Credential Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>L1</fullName>
                </value>
                <value>
                    <fullName>L2</fullName>
                </value>
                <value>
                    <fullName>L3</fullName>
                </value>
                <value>
                    <fullName>L4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPracticeGrowth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this certification counts towards the &quot;Practice Growth&quot; indicator?</description>
        <inlineHelpText>Does this certification counts towards the &quot;Practice Growth&quot; indicator?</inlineHelpText>
        <label>Is Practice Growth?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxPoints__c</fullName>
        <description>Gives the maximum number of points that a certification level will give at the company level.</description>
        <formula>CASE(TEXT(CredentialLevel__c), &quot;L1&quot;, 30, &quot;L2&quot;, 40, &quot;L3&quot;, 80, &quot;L4&quot;, 50, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gives the maximum number of points that a certification level will give at the company level.</inlineHelpText>
        <label>Max Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Release</label>
        <referenceTo>SalesforceRelease__c</referenceTo>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScorePoints__c</fullName>
        <description>Number of points this credential gives.</description>
        <inlineHelpText>Number of points this credential gives.</inlineHelpText>
        <label>Score Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_Unique_Field__c</fullName>
        <description>Concatenation of Vendor Name and Certification Name to generate a unique key that can be used to query the certification records.</description>
        <formula>TEXT(VendorName__c)  &amp; &apos;-&apos; &amp;  Name</formula>
        <inlineHelpText>Concatenation of Vendor Name and Certification Name to generate a unique key that can be used to query the certification records.</inlineHelpText>
        <label>TECH Unique Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorName__c</fullName>
        <description>Certification editor</description>
        <label>Vendor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vendors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Certification Catalog Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>VendorName__c</columns>
        <columns>NAME</columns>
        <columns>CredentialLevel__c</columns>
        <columns>MaxPoints__c</columns>
        <columns>ScorePoints__c</columns>
        <columns>IsPracticeGrowth__c</columns>
        <columns>CountsForTwoCertProgramRequirement__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X010_Salesforce_All</fullName>
        <columns>VendorName__c</columns>
        <columns>NAME</columns>
        <columns>CredentialLevel__c</columns>
        <columns>MaxPoints__c</columns>
        <columns>ScorePoints__c</columns>
        <columns>IsPracticeGrowth__c</columns>
        <columns>CountsForTwoCertProgramRequirement__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VendorName__c</field>
            <operation>equals</operation>
            <value>Salesforce</value>
        </filters>
        <label>010 - Salesforce All</label>
    </listViews>
    <listViews>
        <fullName>X110_ServiceMax_All</fullName>
        <columns>VendorName__c</columns>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VendorName__c</field>
            <operation>equals</operation>
            <value>ServiceMax</value>
        </filters>
        <label>110 - ServiceMax All</label>
    </listViews>
    <nameField>
        <label>Certification Catalog Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Catalog Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>